# vsr

./: CMakeLists.txt  distclean
VSR/: vsr_fieldold.h  vsr_lattice.h  vsr_mdraw.h
VSR/Elements/: vsr_typedefs.h
examples/pending/: Graphics.cpp
src/: vsr_fieldold.cpp
